# polycode

./: .env.example  .gitignore  README.md  pyproject.toml
polycode/: __init__.py  agent.py  cli.py  safe_edit.py
polycode/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
polycode/tools/: __init__.py  base.py  edit_tools.py  file_tools.py  search_tools.py  shell_tools.py
